syntax = "proto3";

package counter.domain;

import "kalix/annotations.proto";

message CounterState {
    string name = 1;
    int32 value = 2;
}
